# kimaideck

./: README.md  config.example.yml  flake.nix  pyproject.toml
kimaideck/: __main__.py  kimai.py  streamdeck.py
